# modified-battleship

./: .gitignore  CMakeLists.txt  readme.md
include/: AI.h  Game.h  Human.h  Logger.h  Player.h  Point.h  RandomNumber.h
include/action/: HitAction.h  MoveAndHealAction.h  MoveAndRevealAction.h
include/actions/: Action.h  HitAction.h  MoveAndHealAction.h  MoveAndRevealAction.h  RemoveHitAction.h  RemoveHitMissAction.h  RemoveRevealedAction.h
include/board/: AttackBoard.h  Board.h  BoardPiece.h  BoardSlot.h  DefenceBoard.h
include/commands/: Command.h  PrintCommand.h  RemoveHitCommand.h  RemoveHitMissCommand.h  RemoveMissedCommand.h  RemoveRevealedCommand.h  ShipActionCommand.h  ShipCommand.h  ShipPlaceCommand.h
include/logger/: ConsoleLogger.h  FileLogger.h  Logger.h
include/player/: AI.h  Human.h  Player.h  ReplayConsolePlayer.h  ReplayFilePlayer.h  ReplayPlayer.h
include/ship/: Armoured.h  ArmouredShip.h  LinearShip.h  Ship.h  ShipPiece.h  Submarine.h  Supporter.h  SupporterShip.h
src/: AI.cpp  Game.cpp  Human.cpp  Logger.cpp  Player.cpp  Point.cpp  RandomNumber.cpp  Utilities.hpp  battleship.cpp  replay.cpp
src/action/: HitAction.cpp  MoveAndHealAction.cpp  MoveAndRevealAction.cpp
src/actions/: Action.cpp  HitAction.cpp  MoveAndHealAction.cpp  MoveAndRevealAction.cpp  RemoveHitAction.cpp  RemoveHitMissAction.cpp  RemoveHitMissCommand.cpp  RemoveRevealedAction.cpp
src/board/: AttackBoard.cpp  Board.cpp  Board.hpp  BoardPiece.cpp  BoardSlot.cpp  DefenceBoard.cpp
src/commands/: Command.cpp  PrintCommand.cpp  RemoveHitCommand.cpp  RemoveMissedCommand.cpp  RemoveRevealedCommand.cpp  ShipActionCommand.cpp  ShipCommand.cpp  ShipPlaceCommand.cpp
src/logger/: ConsoleLogger.cpp  FileLogger.cpp
src/player/: AI.cpp  Human.cpp  Player.cpp  ReplayConsolePlayer.cpp  ReplayFilePlayer.cpp  ReplayPlayer.cpp  replayPlayer.cpp
src/ship/: Armoured.cpp  ArmouredShip.cpp  BoardPiece.cpp  LinearShip.cpp  Ship.cpp  ShipPiece.cpp  Submarine.cpp  Submarine.hpp  Supporter.cpp  Supporter.hpp  SupporterShip.cpp
test/: test.cpp
